--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: react-app:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/react-app:v1.0.0
